# quick-log

./: .gitignore  AGENTS.md  AI_ANALYSIS_FEATURE.md  CLAUDE.md  README.md  docker-compose.yml
.github/workflows/: docker-images.yml
query-service/: .dockerignore  .env.example  Cargo.toml  Dockerfile  logs-index.yaml  test-ai.sh  test-config.sh
query-service/config/: config.yaml
query-service/src/: config.rs  error.rs  main.rs
query-service/src/handlers/: ai_analyzer.rs  health.rs  mod.rs  search.rs
query-service/src/models/: query.rs
query-service/src/services/: ai_analyzer.rs  mod.rs  quickwit.rs
web-ui/: .dockerignore  .env.example  .eslintrc.cjs  Dockerfile  README.md  index.html  nginx.conf  package.json  vite.config.js
web-ui/src/: App.jsx  main.jsx
web-ui/src/api/: search.js
web-ui/src/components/: AiAnalysisModal.jsx
web-ui/src/components/FilterPanel/: index.jsx
web-ui/src/components/LogTable/: index.jsx
web-ui/src/components/SearchBar/: index.jsx
web-ui/src/components/TimeRangePicker/: index.jsx  index.module.css
web-ui/src/pages/Search/: index.jsx
web-ui/src/styles/: index.css
