[package]
name = "log-query-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web 框架
actix-web = "4.4"
actix-rt = "2.9"
actix-cors = "0.7"

# HTTP 客户端
reqwest = { version = "0.11", features = ["json"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 日期时间
chrono = { version = "0.4", features = ["serde"] }

# 配置
config = "0.14"

# 日志
env_logger = "0.11"
log = "0.4"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 环境变量
dotenv = "0.15"
